--- a/Senior-Doctor-Portal/package.json
+++ b/Senior-Doctor-Portal/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "apexcharts": "^3.35.0",
+    "axios": "^1.6.8",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
