--- a/Doctor-Portal/package.json
+++ b/Doctor-Portal/package.json
@@ -11,8 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
