--- a/Admin-Portal/package.json
+++ b/Admin-Portal/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "date-fns": "^3.1.0",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
