--- a/Admin-Portal/package.json
+++ b/Admin-Portal/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.6.8",
     "date-fns": "^3.1.0",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
