--- a/Admin-Portal/package.json
+++ b/Admin-Portal/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.10.3",
     "sass": "^1.69.7"
   },
