--- a/Patient-Portal/package.json
+++ b/Patient-Portal/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
