--- a/Hospital/hospital/package.json
+++ b/Hospital/hospital/package.json
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.6.0",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
