--- a/Patient-Portal/package.json
+++ b/Patient-Portal/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,12 +11,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "icons": "^1.0.0",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.5",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
