--- a/Hospital/hospital/package.json
+++ b/Hospital/hospital/package.json
@@ -45,6 +45,7 @@
     "react-scroll": "^1.9.0",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.5",
     "simple-peer": "^9.11.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
