--- a/Patient-Portal/package.json
+++ b/Patient-Portal/package.json
@@ -13,6 +13,7 @@
     "icons": "^1.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
