--- a/Patient-Server/package.json
+++ b/Patient-Server/package.json
@@ -1,12 +1,43 @@
 {
+  "name": "democall",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.0",
-    "socket.io": "^4.7.5"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.2",
+    "filetransfer": "^2.0.5",
+    "nodemon": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "simplewebrtc": "^3.0.2",
+    "socket.io": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
-
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "nodemon index.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
