--- a/Patient-Portal/package.json
+++ b/Patient-Portal/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.15.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
