--- a/Admin-Portal/package.json
+++ b/Admin-Portal/package.json
@@ -15,12 +15,14 @@
     "@heroicons/react": "^1.0.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^1.6.8",
     "date-fns": "^3.1.0",
+    "global": "^4.4.0",
     "peerjs": "^1.3.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
