--- a/Conferenceserver/package.json
+++ b/Conferenceserver/package.json
@@ -1,36 +1,23 @@
 {
-  "name": "my-react-app",
+  "name": "back",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
-    "chart.js": "^4.4.2",
-    "file-saver": "^2.0.5",
-    "peerjs": "^1.5.2",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
+    "peer": "^1.0.2",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-modal": "^3.16.1",
-    "react-player": "^2.14.1",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
-    "socket.io-client": "^4.7.4",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
