--- a/Admin-Portal/back/package.json
+++ b/Admin-Portal/back/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.19.2",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^2.0.7",
 		"socket.io": "^3.1.1"
 	}
