--- a/Hospital/hospital/package.json
+++ b/Hospital/hospital/package.json
@@ -30,6 +30,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^6.2.9",
     "icons": "^1.0.0",
+    "peerjs": "^1.5.2",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
@@ -40,6 +41,7 @@
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-player": "^2.14.1",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.0",
     "react-scroll": "^1.9.0",
@@ -48,6 +50,8 @@
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.5",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "simple-peer": "^9.11.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
